Fixing Catalog columns alignment (#3222)
* Fixing VirtualList scrollbar style


* Fix VirtualList styling in logs


* Fixing integration tests


* Fixing log element selector


* Not using css modules


* Removing unused prop from VirtualList

--- a/src/renderer/components/virtual-list/virtual-list.scss
+++ b/src/renderer/components/virtual-list/virtual-list.scss
@@ -20,9 +20,8 @@
  */
 
 .VirtualList {
-  overflow: hidden;
-
-  > .list {
+  > div > .list {
+    /* Render scrollbar in content area, preventing to occupy extra space */
     overflow-y: overlay!important;
   }
 }
